@@ -75,8 +75,10 @@ def initialize_settings(pconfig, cfg, section=configparser.DEFAULTSECT):
     pconfig.begin()
     try:
         settings.init(pconfig, cfg)
-        pconfig.registry.notify(ptah.events.SettingsInitializing(pconfig, pconfig.registry))
-        pconfig.registry.notify(ptah.events.SettingsInitialized(pconfig, pconfig.registry))
+        pconfig.registry.notify(
+            ptah.events.SettingsInitializing(pconfig, pconfig.registry))
+        pconfig.registry.notify(
+            ptah.events.SettingsInitialized(pconfig, pconfig.registry))
     except Exception as e:
         raise StopException(e)
     finally:
